# serveM

./: .gitignore  MANIFEST.in  MANIFEST.ini  README.md  main  pyproject.toml  requirements.txt  story.md
.github/workflows/: release.yml
ServeM/: main.py  settings.py
ServeM/public/: index.html
ServeM/screencast/: portal.py  stream_man.py
ServeM/server/: server.py  static_routes.py  stream_route.py
serveM/: __init__.py  main.py  settings.py
serveM/public/: index.html
serveM/screencast/: portal.py  stream_man.py
serveM/server/: server.py  static_routes.py  stream_route.py
