[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = ["serveM"]
include-package-data = true

[project]
name = "serveM"
description = "A simple screen sharing server for modern GNU/LINUX desktops!"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version", "dependencies"]
authors = [{ name = "@bRuttaZz" }]

[project.scripts]
contester = "serveM.main:main"

[project.urls]
Repository = "https://gitlab.com/RnD-Pixdynamics/contester.git"
