[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools]
packages = ["serveM"]
include-package-data = true

[project]
name = "serveM"
description = "A simple screen sharing server for modern GNU/LINUX desktops!"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version", "dependencies"]
authors = [{ name = "@bRuttaZz", email = "agrajpdasprivate@gmail.com" }]
license = { file = "LICENSE" }
keywords = [
    "stmp",
    "sitty-talky",
    "sittytalky",
    "LAN",
    "WLAN",
    "peer-discovery",
    "Messaging",
    "protocol",
    "multicast dns",
    "dns",
    "udp",
    "tcp",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop ',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Adaptive Technologies',
    'Topic :: Internet',
    'Topic :: Communications :: File Sharing',
    'Topic :: Desktop Environment :: Window Managers',
    'Natural Language :: English',
]

[project.scripts]
servem = "serveM.main:main"

[project.urls]
Repository = "https://github.com/bRuttaZz/serveM.git"
